--- a/vid8/style.css
+++ b/vid8/style.css
@@ -1,80 +1,93 @@
+/* GLOBAL RESET */
 * {
     margin: 0;
     padding: 0;
-    box-sizing: 0;
+    box-sizing: border-box;   
     font-family: Georgia, 'Times New Roman', Times, serif;
     color: #000;
 }
-html,
-body{
-    height: 100%;
+
+html, body {
     width: 100%;
+    min-height: 100%;
     background: white;
 }
-section{
-    height: 100vh;
+
+section {
+    min-height: 100vh;
     width: 100%;
     position: relative;
 }
-nav{
+
+/* ---------------- NAVIGATION ---------------- */
+
+nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 40px 70px;
 }
-.part2{
+
+.part2 {
     display: flex;
     align-items: center;
-    justify-content: center;
     gap: 30px;
 }
-nav h1{
+
+nav h1 {
     font-size: 45px;
     display: flex;
-    gap: 10px ;
+    gap: 10px;
 }
-nav h1 i{
+
+nav h1 i {
     rotate: 45deg;
-    display: inline-block;
     font-size: 55px;
+    display: inline-block;
 }
-nav h4{
+
+nav h4 {
     font-size: 25px;
     font-weight: 500;
 }
-nav button{
+
+nav button {
     padding: 15px 20px;
     font-size: 22px;
     border-radius: 10px;
     background-color: transparent;
     font-weight: 600;
     border: 1px solid #000;
+    cursor: pointer;
 }
-.center{
-    height: 85%;
+
+/* ---------------- HERO CENTER ---------------- */
+
+.center {
     width: 100%;
     display: flex;
     padding: 40px 70px;
+    gap: 20px;
 }
-.center-part1{
- 
-    height: 100%;
+
+.center-part1 {
     width: 42%;
 }
 
-.center-part1 h1{
+.center-part1 h1 {
     line-height: 1.2;
     font-size: 70px;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
-.center-part1 p{
+
+.center-part1 p {
     font-size: 19px;
     font-style: oblique;
     width: 95%;
     margin-top: 30px;
     margin-bottom: 20px;
 }
-.center-part1 button{
+
+.center-part1 button {
     background-color: black;
     color: #fff;
     border-radius: 10px;
@@ -82,41 +95,74 @@ nav button{
     font-size: 20px;
     font-weight: 600;
     border: none;
+    cursor: pointer;
 }
-.center-part2{
-    height: 100%;
+
+.center-part2 {
     width: 58%;
     position: relative;
 }
-.center-part2 img{
+
+.center-part2 img {
     position: absolute;
     height: 100%;
+    right: 0;
 }
-.section1bottom{
+
+/* ---------------- BRAND LOGOS ---------------- */
+
+.section1bottom {
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 30px 90px;
+    flex-wrap: wrap;
 }
-.section1bottom img{
+
+.section1bottom img {
     height: 50px;
 }
-.section2 .services{
+
+/* ---------------- SERVICES SECTION ---------------- */
+
+.section2 .services {
     display: flex;
     align-items: center;
-    padding: 20px 90px;
-    justify-content: flex-start;
+    padding: 40px 90px;
+    gap: 40px;
 }
-.services h3{
+
+.services h3 {
     background-color: #9AE975;
     font-weight: 500;
-    padding: 5px 5px;
+    padding: 5px 10px 0 10px;
     border-radius: 5px;
     font-size: 20px;
-    gap: 10px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-style: italic;
 }
-.services p{
-    width: 30%;
-    font-size: 10px;
+
+.services p {
+    width: 40%;
+    font-size: 16px;
     font-weight: 500;
+    line-height: 1.4;
+}
+.container{
+    height: 86%;
+    width: 100%;
+    padding: 40px 120px;
+    display: flex;
+    justify-content: space-between;
+    gap: 30px;
+    flex-wrap: wrap;
+}
+.elem{
+    flex-shrink: 0;
+    height: 300px;
+    width: 45%;
+    background-color: brown;
+    border-radius: 20px;
+    border: 3px solid black;
+    box-shadow: 0px 10px 0px black;
 }
