--- a/vid8/style.css
+++ b/vid8/style.css
@@ -12,7 +12,9 @@ html, body {
     min-height: 100%;
     background: white;
 }
-
+body{
+    overflow-x: hidden;
+}
 section {
     min-height: 100vh;
     width: 100%;
@@ -161,8 +163,50 @@ nav button {
     flex-shrink: 0;
     height: 300px;
     width: 45%;
-    background-color: brown;
     border-radius: 20px;
     border: 3px solid black;
     box-shadow: 0px 10px 0px black;
+    padding: 20px;
+    display: flex;
+}
+.elem_part1{
+    height: 100%;
+    width: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: column;
+}
+.elem_part2{
+    height: 100%;
+    width: 50%;
+}
+.elem_part2 img{
+    height: 100%;
+}
+.elem_part1 h2{
+    font-size: 25px;
+    background-color: #9AE975;
+    font-weight: 400;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    width: 60%;
+    border-radius: 10px;
+    padding: 0px 2px;
+}
+.elem_part1 h4{
+    display: flex;
+    align-items: center;
+    font-size: 20px;
+    font-weight: 400;
+    gap: 5px;
+}
+.elem_part1 h4 i{
+    padding: 10px;
+    background-color: black;
+    color: #fff;
+    border-radius: 50%;
+    font-weight: 600;
+}
+.black{
+    background-color: black;
 }
